--- a/activitypage.html
+++ b/activitypage.html
@@ -62,7 +62,7 @@
                     <span class="material-icons-sharp">
                         inventory
                     </span>
-                    <h3>Sale List</h3>
+                    <h3>Trainings</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">
