--- a/activitypage.html
+++ b/activitypage.html
@@ -43,7 +43,7 @@
                     <span class="material-icons-sharp">
                         receipt_long
                     </span>
-                    <h3>History</h3>
+                    <h3>Tickets</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">
@@ -55,7 +55,7 @@
                     <span class="material-icons-sharp">
                         mail_outline
                     </span>
-                    <h3>Tickets</h3>
+                    <h3>Support</h3>
                     <span class="message-count">27</span>
                 </a>
                 <a href="#">
@@ -68,19 +68,13 @@
                     <span class="material-icons-sharp">
                         report_gmailerrorred
                     </span>
-                    <h3>Reports</h3>
+                    <h3>Punishments</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">
                         settings
                     </span>
                     <h3>Settings</h3>
-                </a>
-                <a href="#">
-                    <span class="material-icons-sharp">
-                        add
-                    </span>
-                    <h3>New Login</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">
