--- a/activitypage.html
+++ b/activitypage.html
@@ -68,13 +68,13 @@
                     <span class="material-icons-sharp">
                         report_gmailerrorred
                     </span>
-                    <h3>Punishments</h3>
+                    <h3>All Reports</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">
-                        settings
+                        plus
                     </span>
-                    <h3>Settings</h3>
+                    <h3>Add Report</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">
