--- a/activitypage.html
+++ b/activitypage.html
@@ -72,7 +72,7 @@
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">
-                        fa-solid fa-plus
+                        settings
                     </span>
                     <h3>Add Report</h3>
                 </a>
